--- a/ATOLL/wwwroot/index.html
+++ b/ATOLL/wwwroot/index.html
@@ -9,7 +9,9 @@
 	<link href="css/app.css" rel="stylesheet" />
 	<link href="ATOLL.styles.css" rel="stylesheet" />
 	<link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
-	<script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+    <script src="wwwroot/app.js" type="text/javascript"></script>
+
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </head>
 
 <body>
