--- a/ATOLL/wwwroot/index.html
+++ b/ATOLL/wwwroot/index.html
@@ -10,8 +10,10 @@
 	<link href="ATOLL.styles.css" rel="stylesheet" />
 	<link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
     <script src="wwwroot/app.js" type="text/javascript"></script>
-    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+	<script src="https://cdn.syncfusion.com/blazor/20.1.47/syncfusion-blazor.min.js" type="text/javascript"></script>
 	<script src="/jquery.js"></script>
+	
+
 </head>
 
 <body>
